--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "quantico",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon src/app.js"
   },
   "type": "module",
   "keywords": [],
