--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "googleapis": "^144.0.0",
+    "openai": "^4.77.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
